--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -19,7 +19,7 @@
       "interests": {
         "title": "Interests",
         "subheader": "",
-        "description": "I am interested in remote collaboration for skill acquisition by means of AR(augmented reality), electrical muscle stimulation."
+        "description": "I am interested in remote collaboration for skill acquisition by means of XR (MR/AR/VR), electrical muscle stimulation."
       },
       "contact": {
         "title": "contact",
