--- a/i18n/locales/ja.json
+++ b/i18n/locales/ja.json
@@ -19,7 +19,7 @@
       "interests": {
         "title": "研究興味",
         "subheader": "",
-        "description": "リモートコラボレーション，AR，EMS．"
+        "description": "HCI, リモートコラボレーション，技術習得，XR (MR/AR/VR)，EMS．"
       },
       "contact": {
         "title": "連絡先",
