--- a/i18n/locales/ja.json
+++ b/i18n/locales/ja.json
@@ -14,7 +14,9 @@
       "aboutme": {
         "title": "所属",
         "subheader": "",
-        "description": "筑波大学情報学群情報メディア創成学類4年"
+        "school": "筑波大学情報学群情報メディア創成学類4年",
+        "lab":"インタラクティブプログラミング研究室(指導教員:川口一画)",
+        "description": "筑波大学情報学群情報メディア創成学類4年．インタラクティブプログラミング研究室(指導教員: 川口一画)."
       },
       "interests": {
         "title": "研究興味",
