--- a/i18n/locales/ja.json
+++ b/i18n/locales/ja.json
@@ -14,9 +14,9 @@
       "aboutme": {
         "title": "所属",
         "subheader": "",
-        "school": "筑波大学情報学群情報メディア創成学類4年",
+        "school": "筑波大学 理工情報生命学術院 システム情報工学研究群情報理工学位プログラム",
         "lab":"インタラクティブプログラミング研究室(指導教員:川口一画)",
-        "description": "筑波大学情報学群情報メディア創成学類4年．インタラクティブプログラミング研究室(指導教員: 川口一画)."
+        "description": "筑波大学 理工情報生命学術院 システム情報工学研究群情報理工学位プログラム 博士前期課程1年．インタラクティブプログラミング研究室(指導教員: 川口一画)."
       },
       "interests": {
         "title": "研究興味",
@@ -65,10 +65,10 @@
         "title": "物理的提示とAR提示を併用するハイブリッド型ロボットにおける頭部と腕部の提示方法の違いによる影響",        
         "authors": "川口 一画, 井原 圭一, 市川 あゆみ, 佐方 葵, 守 新太郎",
         "booktitle":"情報処理学会論文誌",
-        "month": "",
+        "month": "3月",
         "year": "2024",
-        "publisher":"情報処理学会",
-        "pages":"41-47",
+        "publisher":"IPSJ",
+        "pages":"706-717",
         "vol":"65",
         "no":"3" 
       }
@@ -79,14 +79,20 @@
     "education": {
       "sectiontitle": "学歴",
       "items": {
+        "master": {
+          "school": "筑波大学 理工情報生命学術院 システム情報工学研究群情報理工学位プログラム",
+          "degree": "修士(工学)",
+          "subheader": "4月 2024 - 現在",
+          "description": ""
+          },
         "bachelor": {
-        "school": "筑波大学情報学群情報メディア創成学類",
+        "school": "筑波大学 情報学群 情報メディア創成学類",
         "degree": "学士(情報メディア科学)",
-        "subheader": "4月 2022 - 現在",
+        "subheader": "4月 2022 - 3月 2024",
         "description": ""
         },
         "foundation": {
-        "school": "神戸市立工業高等専門学校電子工学科",
+        "school": "神戸市立工業高等専門学校 電子工学科",
         "degree": "準学士(工学)",
         "subheader": "4月 2017 - 3月 2022",
         "description": ""
@@ -123,6 +129,11 @@
         "title": "成績優秀賞",
         "subheader": "3月 2022",
         "description": "神戸市立工業高等専門学校電子工学科を首席で卒業しました．"
+      },
+      "3": {
+        "title": "情報学群長表彰",
+        "subheader": "3月 2024",
+        "description": "筑波大学情報学群から学群長表彰を頂きました．"
       }
     }
   },
